First Check in Code Base
Retrieves chats on twitter and stores Mongolab

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 block_github/
 
 #################
+## Block Node Modules
+#################
+node_modules/
+
+#################
 ## Eclipse
 #################
 
